syntax = "proto3";

package proto.api.account;
option java_package = "com.example.common.api.accountCommon";
option java_multiple_files = true;

enum GenderCommon
{
  M = 0;
  F = 1;
}

enum StateCommon
{
  TX = 0;
  MD = 1;
  ID = 2;
  AL = 3;
  ME = 4;
  TN = 5;
  WY = 6;
  DC = 7;
  MA = 8;
  ND = 9;
  IL = 10;
  VA = 11;
  WA = 12;
  PA = 13;
  IN = 14;
  OK = 15;
  DE = 16;
  RI = 17;
  BO = 18;
}